[fix]: Align of section numbers

--- a/docs/style1.css
+++ b/docs/style1.css
@@ -15,6 +15,21 @@ a {
 	color: #aaaaff;
 }
 
+.section-number-2, .section-number-3 {
+	text-align: right;
+	color: #aaaaaa;
+}
+
+.section-number-3 {
+	position: relative;
+	right: 0.2em;
+}
+
+h3 {
+	position: relative;
+	right: 0.3em
+}
+
 .title {
 	font-family: "IBM Plex Serif Thin";
 	font-size: 300%;
@@ -132,4 +147,24 @@ blockquote:after {
 	padding: -1em;
 	position: relative;
 	top: -2em
+}
+
+.footnotes:before {
+	content: "\1F4DA";
+	margin-right: 0.1em;
+	position: relative;
+}
+
+.footnotes {
+	color: #aaaaaa;
+}
+
+.footpara p {
+	margin-top: -1.5em;
+}
+
+.footnum {
+	font-weight: bold;
+	position: relative;
+	right: -2em;
 }
